--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>📚 Формулы по физике<br><span style="font-size: 0.6em; font-weight: 300;">7-9 классы</span></h1>
+        <h1>Формулы по физике<br><span style="font-size: 0.6em; font-weight: 300;">7-9 классы</span></h1>
         
         <div class="class-section class7">
             <h2 class="class-title">7 класс</h2>
